--- a/jobseekers.html
+++ b/jobseekers.html
@@ -110,7 +110,7 @@
     <!-- Navigation Bar - Copied and adapted from GALLERY.HTML -->
     <nav class="bg-darkBg p-4 shadow-lg border-b-2 border-primary dark:bg-darkBg dark:border-primary">
         <div class="container mx-auto flex justify-between items-center">
-            <a class="text-white text-2xl font-bold tracking-wide transition-colors duration-300 hover:text-primary" href="https://uzairb2b.github.io/home/index.html">JOURNALISM & MASS COMMUNICATION</a>
+            <a class="text-white text-2xl font-bold tracking-wide transition-colors duration-300 hover:text-primary" href="https://educationsimplified.github.io/mgkvp/index.html">JOURNALISM & MASS COMMUNICATION</a>
             <button id="themeToggle" class="theme-toggle-button text-white text-2xl focus:outline-none">
                 ☀️ <!-- Initial state, updated by JS -->
             </button>
@@ -122,7 +122,7 @@
         <nav aria-label="breadcrumb">
             <ol class="flex space-x-2 text-gray-600 dark:text-gray-300">
                 <li class="breadcrumb-item"><a href="index.html" class="text-blue-600 hover:underline dark:text-blue-400">Home</a></li>
-                <li class="breadcrumb-item active text-primary font-semibold" aria-current="page">Alumni Job Seekers</li>
+                <li class="breadcrumb-item active text-primary font-semibold" aria-current="page">Students Job Seekers Data Portal</li>
             </ol>
         </nav>
     </div>
