--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
         <div class="mt-8 flex flex-wrap justify-center space-x-4 md:space-x-6">
             <a href="https://eksochteam.blogspot.com/" class="btn btn-outline-primary rounded-full">EK Soch</a>
             <a href="https://educationsimplified.github.io/mgkvp/about.html" class="btn btn-outline-primary rounded-full">About</a>
+           
+            <a href="jobseekers.html" class="btn btn-outline-primary rounded-full">Students Job Seekers Data</a>
             <a href="https://educationsimplified.github.io/mgkvp/tools.html" class="btn btn-outline-primary rounded-full">Tools</a>
             <a href="https://uzairb2b.github.io/education" class="btn btn-outline-primary rounded-full">Skills</a>
             <a href="https://educationsimplified.github.io/mgkvp/gallery.html" class="btn btn-outline-primary rounded-full">Gallery</a>
