--- a/journalismwallah.html
+++ b/journalismwallah.html
@@ -39,6 +39,20 @@
     <meta name="google-site-verification" content="u6kz1iv_VROEYgej4kKRfJsLWilxzf-JVXFGo5XS8Sw" />
 
     <script src="https://cdn.tailwindcss.com"></script>
+     <style>
+    .scroll-up {
+      animation: scrollUp 30s linear infinite;
+    }
+
+    @keyframes scrollUp {
+      0% {
+        transform: translateY(100%);
+      }
+      100% {
+        transform: translateY(-100%);
+      }
+    }
+  </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -327,23 +341,18 @@
             </div>
         </div>
     </header>
+ 
+<body class="bg-darkBg text-white"> <!-- वेबसाइट का मुख्य बैकग्राउंड डार्क और टेक्स्ट सफेद रहेगा -->
 
-    <section id="how-to-use-section">
-        <div class="container">
-            <h2 class="text-2xl font-semibold text-center mb-4 md:mb-6">How to Use This Website</h2>
-            <div class="video-container">
-                <iframe
-                    src=""https://www.youtube.com/embed/T7Mv6SGimtc?si=Xb2ACVOzXYeIH5-c&autoplay=1"  title="How to Use Journalism Wallah"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen
-                ></iframe>
-            </div>
-            <p class="text-sm text-center mt-4 text-gray-400">
-                Having trouble navigating? Watch this quick guide to make the most of Journalism Wallah!
-            </p>
+    <div class="max-w-3xl mx-auto my-10 bg-darkCard p-6 rounded-lg shadow-lg border border-primary/20">
+        <h1 class="text-3xl font-bold text-center mb-6 text-primary">📋 Students Looking for Jobs / internship </h1>
+        <div id="data-container" class="overflow-hidden h-[500px] relative bg-gray-800 rounded-lg p-4">
+            <!-- यहां 'text-white' को 'text-gray-900' में बदल दिया गया है ताकि स्क्रॉल होने वाले बॉक्स के अंदर का टेक्स्ट काला हो जाए -->
+            <div id="scroll-box" class="space-y-4 scroll-up absolute w-full text-gray-900"></div>
         </div>
-    </section>
+    </div>
+
+    
 
     <section class="py-16 bg-gradient-to-b from-transparent to-black" style="background-color: var(--bg-primary);">
         <div class="container">
@@ -412,6 +421,58 @@
             <div class="text-gray-500 mt-2">Varanasi, Uttar Pradesh, India</div>
         </div>
     </footer>
+
+    <script>
+    const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRYH7Rlqwq1rupcx23cXSDMhtkijSWvS0tvdmuBwnWNlNkmwva54bAAEr59igvDXBncR9zGnAoY_lI6/pub?gid=1872451999&single=true&output=csv';
+
+    async function loadCSVData() {
+      try {
+        const res = await fetch(SHEET_URL);
+        const csvText = await res.text();
+        const rows = csvText.split('\n').slice(1); // Remove headers
+
+        const container = document.getElementById('scroll-box');
+        rows.forEach(row => {
+          const cols = row.split(',');
+
+          if (cols.length < 9) return; // Skip empty/incomplete rows
+
+          const [
+            timestamp,
+            name,
+            age,
+            twelfthPass,
+            qualification,
+            postType,
+            about,
+            resumeLink,
+            whatsapp
+          ] = cols;
+
+          const twelfth = twelfthPass.toLowerCase().includes("yes") ? "✅ 12th Passed" : "";
+          const box = document.createElement("div");
+          box.className = "bg-white p-4 shadow-lg rounded-xl border border-gray-200";
+
+          box.innerHTML = `
+            <p class="font-semibold text-lg">👤 ${name}</p>
+            <p>🎂 Age: ${age}</p>
+            <p>🎓 ${qualification} ${twelfth ? '| ' + twelfth : ''}</p>
+            <p>💼 Post: ${postType}</p>
+            <p>🔗 <a href="${resumeLink}" target="_blank" class="text-blue-600 underline">Resume</a></p>
+            <p>📱 WhatsApp: ${whatsapp}</p>
+            <p>✍️ ${about}</p>
+          `;
+          container.appendChild(box);
+        });
+
+      } catch (error) {
+        document.getElementById('scroll-box').innerHTML =
+          '<p class="text-red-600 text-center">❌ Failed to load data.</p>';
+      }
+    }
+
+    loadCSVData();
+  </script>
 
     <script>
         // --- Navbar Toggle for Mobile ---
